[package]
name = "auracaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
bluer = { version = "0.16.1", features = ["bluetoothd"] }
tokio = { version = "1.37.0", features = ["full"] }
